--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -195,7 +195,7 @@ Surveying the diverse body of research into interactive TV, Cesar and Chorianopo
 
 \subsubsection{The Death of the Author, the Birth of Collective Creation}
 % intro
-The first part of the title above was originally voiced by Roland Barthes in a 1968 essay bearing the phrase as its title, in which he contemplates the role of the author in literary writing\cite{Barthes:1977wq}. His title `the death of the author' points to his criticism to the importance that typically gets associated to the author in the analysis of literary work. To Barthes, a text is not ``the \“message\” of the Author-God'', but rather ``a multi-dimensional space in which a variety of writings, none of them original, blend and clash. The text is a tissue of quotations drawn from the innumerable centers of culture''. Instead of the author, for Barthes, it is the reader where the diverse backgrounds of text become unified. Barthes' criticism is resolute:
+The first part of the title above was originally voiced by Roland Barthes in a 1968 essay bearing the phrase as its title, in which he contemplates the role of the author in literary writing\cite{Barthes:1977wq}. His title `the death of the author' points to his criticism to the importance that typically gets associated to the author in the analysis of literary work. To Barthes, a text is not ``the “message” of the Author-God'', but rather ``a multi-dimensional space in which a variety of writings, none of them original, blend and clash. The text is a tissue of quotations drawn from the innumerable centers of culture''. Instead of the author, for Barthes, it is the reader where the diverse backgrounds of text become unified. Barthes' criticism is resolute:
 
 \begin{quote}
   ``the birth of the reader must be at the cost of the death of the Author''
